feat: 接入身份浏览器认证接口
